--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,3 +1,5 @@
-
-1. Setup customer adding
-2. Setup side menu to switch between pages
+1. Set up orders api
+2. Set up orders Page
+- Add order form
+- List orders
+- Add order completed buttons
