Created docs for SettingListItem

--- a/client/src/Components/Admin/Settings/SettingPage/SettingPage.mdx
+++ b/client/src/Components/Admin/Settings/SettingPage/SettingPage.mdx
@@ -2,7 +2,7 @@
 ---
 name: SettingPage
 menu: Components
-rout: /components/Admin/Settings/SettingPage
+route: /components/Admin/Settings/SettingPage
 ---
 import { Playground, Props } from 'docz';
 import SettingPageInput from './SettingPageInput/SettingPageInput';
