--- a/client/src/Components/Admin/Menu/MenuItemList/MenuItemList.mdx
+++ b/client/src/Components/Admin/Menu/MenuItemList/MenuItemList.mdx
@@ -2,19 +2,66 @@
 ---
 name: MenuItemList
 menu: Components
-route: f:\projects\Node\delivery\client\src\components\Admin\Menu\MenuItemList\MenuItemList.mdx
+route: /components/Admin/Menu/MenuItemList/MenuItemList.mdx
 ---
+import { useState } from 'react';
 import { Playground, Props } from 'docz';
 import MenuItemList from './MenuItemList';
 
-# <Title>
+# Menu Item List
 
 Updated 20/06/2019
 
-<Description>
+Displays a list of menu items which the user can interact with.
 
 <Props of={MenuItemList} />
 
 <Playground>
+  {() => {
+    const [menu, setMenu] = useState([
+      {
+        archived: false,
+        created: "Now",
+        description: `A hamburger (short: burger) is a sandwich consisting of one or more cooked
+        patties of ground meat, usually beef, placed inside a sliced bread roll or bun. The
+        patty may be pan fried, grilled, or flame broiled. Hamburgers are often served with
+         cheese, lettuce, tomato, onion, pickles, bacon, or chiles; condiments such as ketchup,
+         mayonnaise, mustard, relish, or 'special sauce'; and are frequently placed on sesame
+        seed buns. A hamburger topped with cheese is called a cheeseburger.`,
+        menuNumber: "1",
+        price: "10.50",
+        revision: "0",
+        title: "Hamburger",
+        __v: 0,
+        _id: "1",
+      },
+       {
+        archived: false,
+        created: "Now",
+        description: `A salad is a dish consisting of a mixture of small pieces of food, usually vegetables.
+        [1][2] However, different varieties of salad may contain virtually any type of ready-to-eat food.
+         Salads are typically served at room temperature or chilled, with notable exceptions such as south
+         German potato salad which is served warm.`,
+        menuNumber: "2",
+        price: "8.25",
+        revision: "0",
+        title: "Salad",
+        __v: 0,
+        _id: "1",
+      },
+    ])
 
+    const [message, setMessage] = useState("")
+
+    return(
+      <div>
+        <p>{message}</p>
+        <MenuItemList
+          menu={menu}
+          onSelect={i => {setMessage(`You selected: ${i.title}`)}}
+          onDelete={n => {setMessage(`*Delete ${n} API call*`)}}
+        />
+      </div>
+    )
+  }}
 </Playground>
