Menu now uses CRUD Page

--- a/client/src/Components/Admin/Menu/MenuItemForm/MenuItemForm.mdx
+++ b/client/src/Components/Admin/Menu/MenuItemForm/MenuItemForm.mdx
@@ -1,12 +1,12 @@
 
 ---
-name: AdminMenuItemForm
+name: MenuItemForm
 menu: Components
-route: /Admin/Menu/AdminMenuItemForm/AdminMenuItemForm.mdx
+route: /Admin/Menu/MenuItemForm/MenuItemForm.mdx
 ---
 import { useState } from 'react'
 import { Playground, Props } from 'docz';
-import { AdminMenuItemFormComponent } from './AdminMenuItemForm';
+import MenuItemForm from './MenuItemForm';
 
 # Admin Menu Item Form
 
@@ -15,7 +15,7 @@ Updated 20/06/2019
 Form for editing menu items. Can either add a new menu item or update
 an existing one based on whether or not the menuItem prop is provided.
 
-<Props of={AdminMenuItemFormComponent} />
+<Props of={MenuItemForm} />
 
 <Playground>
   {() => {
@@ -24,7 +24,7 @@ an existing one based on whether or not the menuItem prop is provided.
     return (
       <div>
         <p>{ message }</p>
-        <AdminMenuItemFormComponent
+        <MenuItemForm
           addMenuItem={i => setMessage('Add Item: ' + JSON.stringify(i))}
           updateMenuItem={i => setMessage('Update Item: ' + JSON.stringify(i))}
         />
