Renamed sidemenu to sidepanel

--- a/client/src/Components/Navigation/SidePanel/SidePanel.mdx
+++ b/client/src/Components/Navigation/SidePanel/SidePanel.mdx
@@ -1,13 +1,13 @@
 
 ---
-name: SideMenu
+name: SidePanel
 menu: Components
-route: /components/admin/SideMenu/SideMenu
+route: /components/admin/SidePanel/SidePanel
 ---
 import { Playground, Props } from 'docz';
 import PersonIcon from '@material-ui/icons/Person';
-import SideMenu from './SideMenu';
-import SideMenuItem from './SideMenuItem/SideMenuItem';
+import SidePanel from './SidePanel';
+import SidePanelItem from './SidePanelItem/SidePanelItem';
 import { Router, BrowserRouter } from 'react-router-dom';
 
 # Side Menu
@@ -17,4 +17,4 @@ Updated 18/06/2019
 Side menu which displays a list of side menu items. Side menu items
 are links with text and icons. All children should be side menu items.
 
-<Props of={SideMenu} />
+<Props of={SidePanel} />
