--- a/client/src/Components/Navigation/SidePanel/SidePanelItem/SidePanelItem.mdx
+++ b/client/src/Components/Navigation/SidePanel/SidePanelItem/SidePanelItem.mdx
@@ -1,14 +1,14 @@
 
 ---
-name: SideMenuItem
+name: SidePanelItem
 menu: Components
-route: /components/Admin/Sidemenu/SideMenuItem
+route: /components/Admin/Sidemenu/SidePanelItem
 ---
-import SideMenuItem from './SideMenuItem'
+import SidePanelItem from './SidePanelItem'
 import SideMenu from '../SideMenu'
 import PersonIcon from '@material-ui/icons/Person';
 
-# Side Menu SideMenuItem
+# Side Menu SidePanelItem
 
 Updated 18/6/2019
 
